# getMacForNetlink

./: build.gradle  readme.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/jnihook/: App.java  MainActivity.java
app/src/main/jni/: CMakeLists.txt  main.cpp
app/src/main/jni/netlink/: bionic_netlink.cpp  bionic_netlink.h  ifaddrs.cpp  ifaddrs.h  syscall32.s
app/src/main/jni/utils/: Log.h  allInclude.h  arch.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
